--- a/comments-bundle/contao/templates/modules/mod_comment_form.xhtml
+++ b/comments-bundle/contao/templates/modules/mod_comment_form.xhtml
@@ -1,8 +1,9 @@
-<?php if (!$this->requireLogin): ?>
 
-  <!-- indexer::stop -->
-  <div class="form">
-
+<!-- indexer::stop -->
+<div class="form">
+  <?php if ($this->requireLogin): ?>
+    <p class="info"><?php echo $this->login; ?></p>
+  <?php else: ?>
     <?php if ($this->confirm): ?>
       <p class="confirm"><?php echo $this->confirm; ?></p>
     <?php elseif ($this->allowComments): ?>
@@ -10,42 +11,32 @@
         <div class="formbody">
           <input type="hidden" name="FORM_SUBMIT" value="<?php echo $this->formId; ?>" />
           <input type="hidden" name="REQUEST_TOKEN" value="{{request_token}}" />
-
           <div class="widget">
             <?php echo $this->fields['name']->generateWithError(); ?> <?php echo $this->fields['name']->generateLabel(); ?>
           </div>
-
           <div class="widget">
             <?php echo $this->fields['email']->generateWithError(); ?> <?php echo $this->fields['email']->generateLabel(); ?>
           </div>
-
           <div class="widget">
             <?php echo $this->fields['website']->generateWithError(); ?> <?php echo $this->fields['website']->generateLabel(); ?>
           </div>
-
           <?php if (isset($this->fields['captcha'])): ?>
             <div class="widget">
               <?php echo $this->fields['captcha']->generateWithError(); ?> <label for="ctrl_captcha"><?php echo $this->fields['captcha']->generateQuestion(); ?><span class="mandatory">*</span></label>
             </div>
           <?php endif; ?>
-
           <div class="widget">
             <?php echo $this->fields['comment']->generateWithError(); ?> <label for="ctrl_<?php echo $this->fields['comment']->id; ?>" class="invisible"><?php echo $this->fields['comment']->label; ?></label>
           </div>
-
           <div class="widget">
             <?php echo $this->fields['notify']->generateWithError(); ?>
           </div>
-
           <div class="submit_container">
             <input type="submit" class="submit" value="<?php echo $this->submit; ?>" />
           </div>
-
         </div>
       </form>
     <?php endif; ?>
-
-  </div>
-  <!-- indexer::continue -->
-
-<?php endif; ?>
+  <?php endif; ?>
+</div>
+<!-- indexer::continue -->
