--- a/faq-bundle/src/Resources/contao/templates/modules/mod_faqreader.xhtml
+++ b/faq-bundle/src/Resources/contao/templates/modules/mod_faqreader.xhtml
@@ -53,7 +53,7 @@
     <!-- indexer::continue -->
   <?php endif; ?>
 
-  <?php if ($this->allowComments && ($this->comments || !$this->requireLogin)): ?>
+  <?php if ($this->allowComments): ?>
     <div class="ce_comments block">
       <<?php echo $this->hlc; ?>><?php echo $this->addComment; ?></<?php echo $this->hlc; ?>>
       <?php echo implode('', $this->comments); ?>
