[Core] Temporarily adjust the templates
This will most likely be changed again, since running the script instantly was supposed to prevent a flash of unstyled content, which it however does not. The script might then be added at the page bottom and call the `pciturefill()` method only once.

--- a/core-bundle/contao/templates/picture/picture_default.xhtml
+++ b/core-bundle/contao/templates/picture/picture_default.xhtml
@@ -1,44 +1,26 @@
+<?php $id = substr(md5(microtime(true)), 0, 8); ?>
+
 <?php if ($this->sources): ?>
   <picture>
     <!--[if IE 9]><video style="display: none;"><![endif]-->
     <?php foreach ($this->sources as $source): ?>
-      <source
-        srcset="<?php echo $source['srcset'] ?>"
-        <?php if (!empty($source['sizes'])): ?> sizes="<?php echo $source['sizes']; ?>"<?php endif; ?>
-        <?php if (!empty($source['media'])): ?> media="<?php echo $source['media']; ?>"<?php endif; ?>
-      />
+      <source srcset="<?php echo $source['srcset'] ?>" <?php if (!empty($source['sizes'])): ?> sizes="<?php echo $source['sizes']; ?>"<?php endif; ?><?php if (!empty($source['media'])): ?> media="<?php echo $source['media']; ?>"<?php endif; ?> />
     <?php endforeach; ?>
     <!--[if IE 9]></video><![endif]-->
 <?php endif; ?>
 
-<img
-  src="<?php echo $this->img['src']; ?>"
-  <?php if ($this->img['srcset'] !== $this->img['src']): ?>
-    srcset="<?php echo $this->img['srcset']; ?>"
-  <?php endif; ?>
-  <?php if (!empty($this->img['sizes'])): ?> sizes="<?php echo $this->img['sizes']; ?>"<?php endif; ?>
-  <?php if (!$this->sources): ?>
-    width="<?php echo $this->img['width']; ?>"
-    height="<?php echo $this->img['height']; ?>"
-  <?php endif; ?>
-  alt="<?php echo $this->alt; ?>"
-  <?php if ($this->title): ?> title="<?php echo $this->title; ?>"<?php endif; ?>
-/>
+<img src="<?php echo $this->img['src']; ?>"<?php if ($this->img['srcset'] !== $this->img['src']): ?> srcset="<?php echo $this->img['srcset']; ?>"<?php endif; ?><?php if (!empty($this->img['sizes'])): ?> sizes="<?php echo $this->img['sizes']; ?>"<?php endif; ?><?php if (!$this->sources): ?> width="<?php echo $this->img['width']; ?>" height="<?php echo $this->img['height']; ?>"<?php endif; ?><?php if ($this->sources || $this->img['src'] !== $this->img['srcset']): ?> id="img-<?php echo $id; ?>"<?php endif; ?> alt="<?php echo $this->alt; ?>"<?php if ($this->title): ?> title="<?php echo $this->title; ?>"<?php endif; ?> />
 
 <?php if ($this->sources): ?>
   </picture>
 <?php endif; ?>
 
 <?php if ($this->sources || $this->img['src'] !== $this->img['srcset']): ?>
-  <script type="text/javascript">/* <![CDATA[ */
-    // Run the polyfill instantly
-    if (window.picturefill) {
-      (function(){
-        var images = document.getElementsByTagName('img');
-        window.picturefill({
-          elements: [images[images.length - 1]]
-        });
-      })();
-    }
-  /* ]]> */</script>
+  <script type="text/javascript">
+    /* <![CDATA[ */
+    window.picturefill && window.picturefill({
+      elements: document.getElementById('img-<?php echo $id; ?>');
+    })
+    /* ]]> */
+  </script>
 <?php endif; ?>
