--- a/core-bundle/src/Resources/contao/templates/picture/picture_default.xhtml
+++ b/core-bundle/src/Resources/contao/templates/picture/picture_default.xhtml
@@ -19,7 +19,7 @@
   <script type="text/javascript">
     /* <![CDATA[ */
     window.picturefill && window.picturefill({
-      elements: document.getElementById('img-<?php echo $id; ?>');
+      elements: [document.getElementById('img-<?php echo $id; ?>')]
     })
     /* ]]> */
   </script>
