[Core] Adjust the `dir="rtl"` output (see #7171)

--- a/core-bundle/contao/templates/frontend/fe_page.xhtml
+++ b/core-bundle/contao/templates/frontend/fe_page.xhtml
@@ -1,5 +1,5 @@
 <?php echo $this->doctype; ?>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $this->language; ?>" lang="<?php echo $this->language; ?>"<?php echo $this->direction; ?>>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $this->language; ?>" lang="<?php echo $this->language; ?>"<?php if ($this->isRTL): ?> dir="rtl"<?php endif; ?>>
 <head>
 
   <?php $this->block('head'); ?>
