--- a/core-bundle/src/Resources/contao/templates/forms/form_submit.xhtml
+++ b/core-bundle/src/Resources/contao/templates/forms/form_submit.xhtml
@@ -1,9 +1,15 @@
 <?php $this->extend('form_row'); ?>
 
 <?php $this->block('field'); ?>
+  <?php if (!$this->tableless): ?>
+    <div class="submit_container">
+  <?php endif; ?>
   <?php if ($this->src): ?>
     <input type="image" src="<?php echo $this->src; ?>" id="ctrl_<?php echo $this->id; ?>" class="submit<?php if ($this->class) echo ' ' . $this->class; ?>" title="<?php echo specialchars($this->slabel); ?>" alt="<?php echo specialchars($this->slabel); ?>"<?php echo $this->getAttributes(); ?> />
   <?php else: ?>
     <input type="submit" id="ctrl_<?php echo $this->id; ?>" class="submit<?php if ($this->class) echo ' ' . $this->class; ?>" value="<?php echo specialchars($this->slabel); ?>"<?php echo $this->getAttributes(); ?> />
+  <?php endif; ?>
+  <?php if (!$this->tableless): ?>
+    </div>
   <?php endif; ?>
 <?php $this->endblock(); ?>
