--- a/core-bundle/src/Resources/contao/templates/picture/picture_default.xhtml
+++ b/core-bundle/src/Resources/contao/templates/picture/picture_default.xhtml
@@ -17,9 +17,11 @@
 <?php if ($this->sources || $this->img['src'] !== $this->img['srcset']): ?>
   <script type="text/javascript">
     /* <![CDATA[ */
-    window.picturefill && window.picturefill({
-      elements: [document.images[document.images.length - 1]]
-    });
+    (function(p) {
+      p && p({
+        elements: [document.images[document.images.length - 1]]
+      });
+    })(window.picturefill || window.respimage);
     /* ]]> */
   </script>
 <?php endif; ?>
