--- a/core-bundle/src/Resources/contao/templates/picture/picture_default.xhtml
+++ b/core-bundle/src/Resources/contao/templates/picture/picture_default.xhtml
@@ -17,11 +17,9 @@
 <?php if ($this->sources || $this->img['src'] !== $this->img['srcset']): ?>
   <script type="text/javascript">
     /* <![CDATA[ */
-    (function(p) {
-      p && p({
-        elements: [document.images[document.images.length - 1]]
-      });
-    })(window.picturefill || window.respimage);
+    window.respimage && window.respimage({
+      elements: [document.images[document.images.length - 1]]
+    });
     /* ]]> */
   </script>
 <?php endif; ?>
