--- a/core-bundle/contao/templates/elements/ce_hyperlink_image.xhtml
+++ b/core-bundle/contao/templates/elements/ce_hyperlink_image.xhtml
@@ -9,7 +9,7 @@
     <?php echo $this->embed_post; ?>
 
     <?php if ($this->caption): ?>
-      <div class="caption" style="width:<?php echo $this->arrSize[0]; ?>px"><?php echo $this->caption; ?></div>
+      <div class="caption"><?php echo $this->caption; ?></div>
     <?php endif; ?>
 
   </div>
