--- a/core-bundle/src/Resources/contao/templates/gallery/gallery_default.xhtml
+++ b/core-bundle/src/Resources/contao/templates/gallery/gallery_default.xhtml
@@ -11,7 +11,7 @@
               <?php $this->insert('picture_default', $col->picture); ?>
             <?php endif; ?>
             <?php if ($col->caption): ?>
-              <div class="caption" style="width:<?php echo $col->arrSize[0]; ?>px"><?php echo $col->caption; ?></div>
+              <div class="caption"><?php echo $col->caption; ?></div>
             <?php endif; ?>
           </div>
         </li>
