[Faq] Remove the hardcoded figcaption width (see #7549)

--- a/faq-bundle/contao/templates/modules/mod_faqpage.xhtml
+++ b/faq-bundle/contao/templates/modules/mod_faqpage.xhtml
@@ -29,7 +29,7 @@
                 <?php endif; ?>
 
                 <?php if ($faq->caption): ?>
-                  <div class="caption" style="width:<?php echo $faq->arrSize[0]; ?>px"><?php echo $faq->caption; ?></div>
+                  <div class="caption"><?php echo $faq->caption; ?></div>
                 <?php endif; ?>
 
               </div>
