--- a/core-bundle/contao/themes/flexible/src/iefixes.css
+++ b/core-bundle/contao/themes/flexible/src/iefixes.css
@@ -3,9 +3,7 @@
  *
  * Copyright (c) 2005-2015 Leo Feyer
  *
- * @package Core
- * @link    https://contao.org
- * @license http://www.gnu.org/licenses/lgpl-3.0.html LGPL
+ * @license LGPL-3.0+
  */
 
 /* Filter */
