--- a/core-bundle/contao/themes/flexible/src/main.css
+++ b/core-bundle/contao/themes/flexible/src/main.css
@@ -3,9 +3,7 @@
  *
  * Copyright (c) 2005-2015 Leo Feyer
  *
- * @package Core
- * @link    https://contao.org
- * @license http://www.gnu.org/licenses/lgpl-3.0.html LGPL
+ * @license LGPL-3.0+
  */
 
 /* Body */
@@ -596,6 +594,46 @@ input[type=search]::-webkit-search-decoration {
 	border-left:10px solid #f3f3f3;
 	border-right:10px solid #f3f3f3;
 }
+.tl_content.indent_1.wrapper_start,.tl_content.indent_1.wrapper_separator,.tl_content.indent_1.wrapper_stop {
+	background:#eaeaea;
+}
+.tl_content.indent_1.wrapper_stop {
+	border-bottom-color:#dbdbdb;
+}
+.tl_content.indent_2 {
+	width:653px;
+	margin-left:10px;
+	margin-right:10px;
+	box-shadow:-10px 0 #f3f3f3,10px 0 #f3f3f3;
+	border-left-color:#eaeaea;
+	border-right-color:#eaeaea;
+}
+.tl_content.indent_3 {
+	width:633px;
+	margin-left:20px;
+	margin-right:20px;
+	box-shadow:-10px 0 #eaeaea,10px 0 #eaeaea,-20px 0 #f3f3f3,20px 0 #f3f3f3;
+}
+.tl_content.indent_3.wrapper_start,.tl_content.indent_3.wrapper_separator,.tl_content.indent_3.wrapper_stop {
+	background:#eaeaea;
+}
+.tl_content.indent_3.wrapper_stop {
+	border-bottom-color:#dbdbdb;
+}
+.tl_content.indent_4 {
+	width:613px;
+	margin-left:30px;
+	margin-right:30px;
+	box-shadow:-10px 0 #f3f3f3,10px 0 #f3f3f3,-20px 0 #eaeaea,20px 0 #eaeaea,-30px 0 #f3f3f3,30px 0 #f3f3f3;
+	border-left-color:#eaeaea;
+	border-right-color:#eaeaea;
+}
+.tl_content.indent_5 {
+	width:593px;
+	margin-left:40px;
+	margin-right:40px;
+	box-shadow:-10px 0 #eaeaea,10px 0 #eaeaea,-20px 0 #f3f3f3,20px 0 #f3f3f3,-30px 0 #eaeaea,30px 0 #eaeaea,-40px 0 #f3f3f3,40px 0 #f3f3f3;
+}
 .no_padding {
 	padding:2px 6px;
 }
@@ -897,6 +935,10 @@ ul.sgallery li {
 #tl_versions td:last-child {
 	width:32px;
 	white-space:nowrap;
+	text-align:right;
+}
+#tl_versions img.undo {
+	padding-right:2px;
 }
 
 /* CHMOD table */
@@ -1320,52 +1362,52 @@ a.navigation {
 	background:url("images/hints.gif") no-repeat -20px 20px;
 }
 #ctrl_playerSize_0 {
-	background-position:142px 1px !important;
+	background-position:right 1px !important;
 }
 #ctrl_playerSize_1 {
-	background-position:143px -18px !important;
+	background-position:right -18px !important;
 }
 .tl_imageSize_0 {
-	background-position:63px 1px !important;
+	background-position:right 1px !important;
 }
 .tl_imageSize_1 {
-	background-position:64px -18px !important;
+	background-position:right -18px !important;
 }
 .trbl_top {
-	background-position:47px -39px !important;
+	background-position:right -39px !important;
 }
 .trbl_right {
-	background-position:47px -59px !important;
+	background-position:right -59px !important;
 }
 .trbl_bottom {
-	background-position:47px -79px !important;
+	background-position:right -79px !important;
 }
 .trbl_left {
-	background-position:47px -99px !important;
+	background-position:right -99px !important;
 }
 #ctrl_shadowsize_top {
-	background-position:46px -119px !important;
+	background-position:right -119px !important;
 }
 #ctrl_shadowsize_right {
-	background-position:46px -139px !important;
+	background-position:right -139px !important;
 }
 #ctrl_shadowsize_bottom {
-	background-position:46px -159px !important;
+	background-position:right -159px !important;
 }
 #ctrl_shadowsize_left {
-	background-position:46px -179px !important;
+	background-position:right -179px !important;
 }
 #ctrl_borderradius_top {
-	background-position:0 -199px !important;
+	background-position:left -199px !important;
 }
 #ctrl_borderradius_right {
-	background-position:47px -219px !important;
+	background-position:right -219px !important;
 }
 #ctrl_borderradius_bottom {
-	background-position:47px -241px !important;
+	background-position:right -241px !important;
 }
 #ctrl_borderradius_left {
-	background-position:0 -261px !important;
+	background-position:left -261px !important;
 }
 
 /* Error messages */
@@ -1538,6 +1580,18 @@ fieldset.collapsed > legend {
 	.tl_content.indent {
 		width:853px;
 	}
+	.tl_content.indent_2 {
+		width:833px;
+	}
+	.tl_content.indent_3 {
+		width:813px;
+	}
+	.tl_content.indent_4 {
+		width:793px;
+	}
+	.tl_content.indent_5 {
+		width:773px;
+	}
 	.tl_content_left {
 		width:680px;
 	}
@@ -1633,54 +1687,6 @@ fieldset.collapsed > legend {
 	}
 	.mac .tl_panel select {
 		max-width:184px;
-	}
-	#ctrl_playerSize_0 {
-		background-position:164px 1px !important;
-	}
-	#ctrl_playerSize_1 {
-		background-position:165px -18px !important;
-	}
-	.tl_imageSize_0 {
-		background-position:85px 1px !important;
-	}
-	.tl_imageSize_1 {
-		background-position:86px -18px !important;
-	}
-	.trbl_top {
-		background-position:70px -39px !important;
-	}
-	.trbl_right {
-		background-position:70px -59px !important;
-	}
-	.trbl_bottom {
-		background-position:70px -79px !important;
-	}
-	.trbl_left {
-		background-position:70px -99px !important;
-	}
-	#ctrl_shadowsize_top {
-		background-position:69px -119px !important;
-	}
-	#ctrl_shadowsize_right {
-		background-position:69px -139px !important;
-	}
-	#ctrl_shadowsize_bottom {
-		background-position:69px -159px !important;
-	}
-	#ctrl_shadowsize_left {
-		background-position:69px -179px !important;
-	}
-	#ctrl_borderradius_top {
-		background-position:0 -199px !important;
-	}
-	#ctrl_borderradius_right {
-		background-position:70px -219px !important;
-	}
-	#ctrl_borderradius_bottom {
-		background-position:70px -241px !important;
-	}
-	#ctrl_borderradius_left {
-		background-position:0 -261px !important;
 	}
 }
 
