[Core] Remove the SetApplicationPass class
By the time the container is built, the version information currently taken from the constants.php file is not yet available. The Contao framework is only initialized on the kernel.request event, which fires much later.

--- a/core-bundle/src/Resources/views/Collector/contao.html.twig
+++ b/core-bundle/src/Resources/views/Collector/contao.html.twig
@@ -6,6 +6,10 @@
     {% endset %}
     {% set text %}
     <div class="sf-toolbar-info-piece">
+        <b>Contao</b>
+        <span>{{ constant('VERSION') }}.{{ constant('BUILD') }}</span>
+    </div>
+    <div class="sf-toolbar-info-piece">
         <b>Execution time</b>
         <span>{{ collector.summary.execution_time }} ms</span>
     </div>
@@ -37,7 +41,6 @@
 {% endblock %}
 
 {% block panel %}
-
     <h2>Summary</h2>
     <table>
         <tr>
@@ -194,5 +197,4 @@
     {{ dump(collector.additionaldata) }}
     </pre>
     {% endif %}
-
 {% endblock %}
