--- a/faq-bundle/src/Resources/contao/templates/modules/mod_faqreader.xhtml
+++ b/faq-bundle/src/Resources/contao/templates/modules/mod_faqreader.xhtml
@@ -3,20 +3,20 @@
 <?php $this->block('content'); ?>
 
   <?php if ($this->error): ?>
-    <?php echo $this->error; ?>
+    <?= $this->error ?>
   <?php else: ?>
-    <h1><?php echo $this->question; ?></h1>
+    <h1><?= $this->question ?></h1>
     <div class="ce_text block">
 
       <?php if (!$this->addBefore): ?>
-        <?php echo $this->answer; ?>
+        <?= $this->answer ?>
       <?php endif; ?>
 
       <?php if ($this->addImage): ?>
-        <div class="image_container<?php echo $this->floatClass; ?>"<?php if ($this->margin): ?> style="<?php echo $this->margin; ?>"<?php endif; ?>>
+        <div class="image_container<?= $this->floatClass ?>"<?php if ($this->margin): ?> style="<?= $this->margin ?>"<?php endif; ?>>
 
           <?php if ($this->href): ?>
-            <a href="<?php echo $this->href; ?>"<?php echo $this->attributes; ?> title="<?php echo $this->alt; ?>">
+            <a href="<?= $this->href ?>"<?= $this->attributes ?> title="<?= $this->alt ?>">
           <?php endif; ?>
 
           <?php $this->insert('picture_default', $this->picture); ?>
@@ -26,14 +26,14 @@
           <?php endif; ?>
 
           <?php if ($this->caption): ?>
-            <div class="caption"><?php echo $this->caption; ?></div>
+            <div class="caption"><?= $this->caption ?></div>
           <?php endif; ?>
 
         </div>
       <?php endif; ?>
 
       <?php if ($this->addBefore): ?>
-        <?php echo $this->answer; ?>
+        <?= $this->answer ?>
       <?php endif; ?>
 
     </div>
@@ -41,23 +41,23 @@
     <?php if ($this->enclosure): ?>
       <div class="enclosure">
         <?php foreach ($this->enclosure as $enclosure): ?>
-          <p><img src="<?php echo $enclosure['icon']; ?>" width="18" height="18" alt="<?php echo $enclosure['mime']; ?>" class="mime_icon" /> <a href="<?php echo $enclosure['href']; ?>" title="<?php echo $enclosure['title']; ?>"><?php echo $enclosure['link']; ?> <span class="size">(<?php echo $enclosure['filesize']; ?>)</span></a></p>
+          <p><img src="<?= $enclosure['icon'] ?>" width="18" height="18" alt="<?= $enclosure['mime'] ?>" class="mime_icon" /> <a href="<?= $enclosure['href'] ?>" title="<?= $enclosure['title'] ?>"><?= $enclosure['link'] ?> <span class="size">(<?= $enclosure['filesize'] ?>)</span></a></p>
         <?php endforeach; ?>
       </div>
     <?php endif; ?>
 
-    <p class="info"><?php echo $this->info; ?></p>
+    <p class="info"><?= $this->info ?></p>
 
     <!-- indexer::stop -->
-    <p class="back"><a href="<?php echo $this->referer; ?>" title="<?php echo $this->back; ?>"><?php echo $this->back; ?></a></p>
+    <p class="back"><a href="<?= $this->referer ?>" title="<?= $this->back ?>"><?= $this->back ?></a></p>
     <!-- indexer::continue -->
   <?php endif; ?>
 
   <?php if ($this->allowComments): ?>
     <div class="ce_comments block">
-      <<?php echo $this->hlc; ?>><?php echo $this->addComment; ?></<?php echo $this->hlc; ?>>
-      <?php echo implode('', $this->comments); ?>
-      <?php echo $this->pagination; ?>
+      <<?= $this->hlc ?>><?= $this->addComment ?></<?= $this->hlc ?>>
+      <?= implode('', $this->comments) ?>
+      <?= $this->pagination ?>
       <?php include $this->getTemplate('mod_comment_form', 'xhtml'); ?>
     </div>
   <?php endif; ?>
