[Newsletter] Use short open tags in the templates

--- a/newsletter-bundle/src/Resources/contao/templates/modules/mod_newsletter.xhtml
+++ b/newsletter-bundle/src/Resources/contao/templates/modules/mod_newsletter.xhtml
@@ -2,6 +2,6 @@
 
 <?php $this->block('content'); ?>
 
-  <p class="<?php echo $this->mclass; ?>"><?php echo $this->message; ?></p>
+  <p class="<?= $this->mclass ?>"><?= $this->message ?></p>
 
 <?php $this->endblock(); ?>
