--- a/newsletter-bundle/src/Resources/contao/templates/modules/mod_newsletter_list.xhtml
+++ b/newsletter-bundle/src/Resources/contao/templates/modules/mod_newsletter_list.xhtml
@@ -5,7 +5,7 @@
   <?php if (!empty($this->newsletters)): ?>
     <ul>
       <?php foreach($this->newsletters as $newsletter): ?>
-        <li><?php echo $newsletter['datim']; ?>: <a href="<?php echo $newsletter['href']; ?>" title="<?php echo $newsletter['title']; ?>"><?php echo $newsletter['subject']; ?></a></li>
+        <li><?= $newsletter['datim'] ?>: <a href="<?= $newsletter['href'] ?>" title="<?= $newsletter['title'] ?>"><?= $newsletter['subject'] ?></a></li>
       <?php endforeach; ?>
     </ul>
   <?php endif; ?>
