--- a/newsletter-bundle/src/Resources/contao/templates/modules/mod_newsletter_reader.xhtml
+++ b/newsletter-bundle/src/Resources/contao/templates/modules/mod_newsletter_reader.xhtml
@@ -2,22 +2,22 @@
 
 <?php $this->block('content'); ?>
 
-  <h1><?php echo $this->subject; ?></h1>
+  <h1><?= $this->subject ?></h1>
 
   <div class="newsletter">
-    <?php echo $this->content; ?>
+    <?= $this->content ?>
   </div>
 
   <?php if ($this->enclosure): ?>
     <div class="enclosure">
       <?php foreach ($this->enclosure as $enclosure): ?>
-        <p><img src="<?php echo $enclosure['icon']; ?>" width="18" height="18" alt="<?php echo $enclosure['mime']; ?>" class="mime_icon" /> <a href="<?php echo $enclosure['href']; ?>" title="<?php echo $enclosure['title']; ?>"><?php echo $enclosure['link']; ?> <span class="size">(<?php echo $enclosure['filesize']; ?>)</span></a></p>
+        <p><img src="<?= $enclosure['icon'] ?>" width="18" height="18" alt="<?= $enclosure['mime'] ?>" class="mime_icon" /> <a href="<?= $enclosure['href'] ?>" title="<?= $enclosure['title'] ?>"><?= $enclosure['link'] ?> <span class="size">(<?= $enclosure['filesize'] ?>)</span></a></p>
       <?php endforeach; ?>
     </div>
   <?php endif; ?>
 
   <!-- indexer::stop -->
-  <p class="back"><a href="<?php echo $this->referer; ?>" title="<?php echo $this->back; ?>"><?php echo $this->back; ?></a></p>
+  <p class="back"><a href="<?= $this->referer ?>" title="<?= $this->back ?>"><?= $this->back ?></a></p>
   <!-- indexer::continue -->
 
 <?php $this->endblock(); ?>
