--- a/comments-bundle/src/Resources/contao/templates/modules/mod_comment_form.xhtml
+++ b/comments-bundle/src/Resources/contao/templates/modules/mod_comment_form.xhtml
@@ -2,37 +2,37 @@
 <!-- indexer::stop -->
 <div class="form">
   <?php if ($this->requireLogin): ?>
-    <p class="info"><?php echo $this->login; ?></p>
+    <p class="info"><?= $this->login ?></p>
   <?php else: ?>
     <?php if ($this->confirm): ?>
-      <p class="confirm"><?php echo $this->confirm; ?></p>
+      <p class="confirm"><?= $this->confirm ?></p>
     <?php elseif ($this->allowComments): ?>
-      <form action="<?php echo $this->action; ?>" id="<?php echo $this->formId; ?>" method="post">
+      <form action="<?= $this->action ?>" id="<?= $this->formId ?>" method="post">
         <div class="formbody">
-          <input type="hidden" name="FORM_SUBMIT" value="<?php echo $this->formId; ?>" />
+          <input type="hidden" name="FORM_SUBMIT" value="<?= $this->formId ?>" />
           <input type="hidden" name="REQUEST_TOKEN" value="{{request_token}}" />
           <div class="widget">
-            <?php echo $this->fields['name']->generateWithError(); ?> <?php echo $this->fields['name']->generateLabel(); ?>
+            <?= $this->fields['name']->generateWithError() ?> <?= $this->fields['name']->generateLabel() ?>
           </div>
           <div class="widget">
-            <?php echo $this->fields['email']->generateWithError(); ?> <?php echo $this->fields['email']->generateLabel(); ?>
+            <?= $this->fields['email']->generateWithError() ?> <?= $this->fields['email']->generateLabel() ?>
           </div>
           <div class="widget">
-            <?php echo $this->fields['website']->generateWithError(); ?> <?php echo $this->fields['website']->generateLabel(); ?>
+            <?= $this->fields['website']->generateWithError() ?> <?= $this->fields['website']->generateLabel() ?>
           </div>
           <?php if (isset($this->fields['captcha'])): ?>
             <div class="widget">
-              <?php echo $this->fields['captcha']->generateWithError(); ?> <label for="ctrl_captcha"><?php echo $this->fields['captcha']->generateQuestion(); ?><span class="mandatory">*</span></label>
+              <?= $this->fields['captcha']->generateWithError() ?> <label for="ctrl_captcha"><?= $this->fields['captcha']->generateQuestion() ?><span class="mandatory">*</span></label>
             </div>
           <?php endif; ?>
           <div class="widget">
-            <?php echo $this->fields['comment']->generateWithError(); ?> <label for="ctrl_<?php echo $this->fields['comment']->id; ?>" class="invisible"><?php echo $this->fields['comment']->label; ?></label>
+            <?= $this->fields['comment']->generateWithError() ?> <label for="ctrl_<?= $this->fields['comment']->id ?>" class="invisible"><?= $this->fields['comment']->label ?></label>
           </div>
           <div class="widget">
-            <?php echo $this->fields['notify']->generateWithError(); ?>
+            <?= $this->fields['notify']->generateWithError() ?>
           </div>
           <div class="submit_container">
-            <input type="submit" class="submit" value="<?php echo $this->submit; ?>" />
+            <input type="submit" class="submit" value="<?= $this->submit ?>" />
           </div>
         </div>
       </form>
