[Core] Added page layout when in frontend scope

--- a/core-bundle/src/Resources/views/Collector/contao.html.twig
+++ b/core-bundle/src/Resources/views/Collector/contao.html.twig
@@ -15,6 +15,12 @@
         <b>Container Scope</b>
         {{ collector.summary.scope }}
     </div>
+    {% if collector.summary.scope == 'frontend' %}
+    <div class="sf-toolbar-info-piece">
+        <b>Page Layout</b>
+        {{ collector.summary.layout }}
+    </div>
+    {% endif %}
     {% endif %}
     {% endset %}
     {% if collector.summary.framework %}
