[Core] Inject the config adapter into the exception listener and drop usage of legacy classes.

--- a/core-bundle/src/Resources/views/Error/error_layout.html.twig
+++ b/core-bundle/src/Resources/views/Error/error_layout.html.twig
@@ -13,7 +13,7 @@
     </style>
     {% endblock %}
 </head>
-<body class="{{ agentClass }}">
+<body>
 <div id="header">
     <div class="wrap">
         <div class="header-logo">
