--- a/core-bundle/src/Resources/views/error.css.twig
+++ b/core-bundle/src/Resources/views/error.css.twig
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    font: 1em Open Sans, Helvetica, sans-serif;
+    font: 1em "Open Sans", Helvetica, sans-serif;
     font-weight: 300;
     color: #333;
     margin: 0;
@@ -13,10 +13,6 @@ body {
 a, a:visited {
     text-decoration: none;
     color: #e4790f;
-}
-
-a:focus {
-    outline: 0;
 }
 
 a:hover {
@@ -30,25 +26,24 @@ h1, h2, h3 {
 h1 {
     font-size: 3em;
     margin: 0;
-    padding: 2% 0;
+    padding-bottom: 2%;
 }
 
 h2, h3 {
     font-size: 1.5em;
 }
 
-
 #header {
-    padding-top: 5%;
+    padding: 12px 0 10px;
 }
 
 #content {
-    background-color: #eeeeee;
-    padding: 1% 0;
+    background-color: #eee;
+    padding: 3% 0;
 }
 
 #footer {
-    font-size: 0.8em;
+    font-size: 0.75em;
     text-align: center;
     padding: .5em 0;
     color: #999;
@@ -57,6 +52,7 @@ h2, h3 {
 .wrap {
     width: 50%;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .header-logo {
@@ -66,6 +62,7 @@ h2, h3 {
 .search {
     display: inline-block;
     float: right;
+    margin: 21px 6px 0 0;
 }
 
 .block-error {
@@ -75,7 +72,7 @@ h2, h3 {
     margin-bottom: 20px;
     background-color: #fff;
     border: 1px solid #dfdfdf;
-    padding: 30px 28px;
+    padding: 15px 28px 24px;
     word-wrap: break-word;
     overflow: hidden;
 }
@@ -89,4 +86,23 @@ h2, h3 {
 
 .block-error .inner {
     padding-left: 15%;
+}
+
+input, button {
+    background: #fff;
+    padding: 3px 6px 3px;
+    border: 1px solid #dfdfdf;
+    border-radius: 3px;
+    line-height: 16px;
+}
+
+input[type="search"] {
+    width: 15em;
+    margin-right: 3px;
+}
+
+label img {
+    position: relative;
+    top: 3px;
+    margin-right: 3px;
 }
