[Core] Rename the error_layout.html.twig template to layout.html.twig.

--- a/core-bundle/src/Resources/views/Error/no_page.html.twig
+++ b/core-bundle/src/Resources/views/Error/no_page.html.twig
@@ -1,4 +1,4 @@
-{% extends "@ContaoCore/Error/error_layout.html.twig" %}
+{% extends "@ContaoCore/Error/layout.html.twig" %}
 {% block title %}
     {{ statusCode }} - {{ error.notFound }}
 {% endblock %}
