--- a/core-bundle/src/Resources/views/Error/no_active.html.twig
+++ b/core-bundle/src/Resources/views/Error/no_active.html.twig
@@ -1,6 +1,6 @@
 {% extends "@ContaoCore/Error/layout.html.twig" %}
 {% block title %}
-    {{ statusCode }} - {{ error.noActive }}
+    {{ statusCode }} {{ error.noActive }}
 {% endblock %}
 {% block matter %}
     <p>{{ error.noActivePages }}</p>
