--- a/core-bundle/src/Resources/views/Error/no_layout.html.twig
+++ b/core-bundle/src/Resources/views/Error/no_layout.html.twig
@@ -1,6 +1,6 @@
 {% extends "@ContaoCore/Error/layout.html.twig" %}
 {% block title %}
-    {{ statusCode }} - {{ error.noLayout }}
+    {{ statusCode }} {{ error.noLayout }}
 {% endblock %}
 {% block matter %}
     <p>{{ error.noLayoutSpecified }}</p>
