--- a/core-bundle/src/Resources/views/Error/referer.html.twig
+++ b/core-bundle/src/Resources/views/Error/referer.html.twig
@@ -1,6 +1,6 @@
 {% extends "@ContaoCore/Error/layout.html.twig" %}
 {% block title %}
-    {{ statusCode }} - {{ error.requestToken }}
+    {{ statusCode }} {{ error.requestToken }}
 {% endblock %}
 {% block matter %}
     <p>{{ error.invalidToken }}</p>
