[Core] Wrap the inline CSS into a Twig block (see #199).

--- a/core-bundle/src/Resources/views/Error/unavailable.html.twig
+++ b/core-bundle/src/Resources/views/Error/unavailable.html.twig
@@ -2,96 +2,100 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>{% block title %}{{ error.unavailable }}{% endblock %}</title>
-    <meta name="generator" content="Contao Open Source CMS">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet" type="text/css">
-    <style>
-        html {
-            background: #fff;
-        }
-        body {
-            margin: 0;
-            padding: 0;
-            font: 1em "Open Sans", Helvetica, sans-serif;
-            font-weight: 300;
-            color: #333;
-        }
-        a, a:visited {
-            text-decoration: none;
-            color: #e4790f;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        h1, h2, h3 {
-            font-weight: 300;
-        }
-        h1 {
-            margin: 0;
-            padding-bottom: 2%;
-            font-size: 3em;
-        }
-        h2, h3 {
-            font-size: 1.5em;
-        }
-        #header {
-            padding: 12px 0 10px;
-        }
-        #content {
-            padding: 3% 0;
-            background-color: #eee;
-        }
-        #footer {
-            font-size: 0.75em;
-            text-align: center;
-            padding: .5em 0;
-            color: #999;
-        }
-        .wrap {
-            width: 50%;
-            margin: 0 auto;
-            overflow: hidden;
-        }
-        .header-logo {
-            display: inline-block;
-        }
-        .block-error {
-            margin-bottom: 20px;
-            background-color: #fff;
-            border: 1px solid #dfdfdf;
-            border-radius: 16px;
-            padding: 15px 28px 24px;
-            word-wrap: break-word;
-            overflow: hidden;
-        }
-        .block-error:before {
-            float: left;
-            content: "</";
-            font-size: 5em;
-            color: #ccc;
-        }
-        .block-error .inner {
-            padding-left: 15%;
-        }
-        input, button {
-            background: #fff;
-            padding: 3px 6px 3px;
-            border: 1px solid #dfdfdf;
-            border-radius: 3px;
-            line-height: 16px;
-        }
-        input[type="search"] {
-            width: 15em;
-            margin-right: 3px;
-        }
-        label img {
-            position: relative;
-            top: 3px;
-            margin-right: 3px;
-        }
-    </style>
+    {% block head %}
+        <meta charset="utf-8">
+        <title>{% block title %}{{ error.unavailable }}{% endblock %}</title>
+        <meta name="generator" content="Contao Open Source CMS">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet" type="text/css">
+        {% block style %}
+            <style>
+                html {
+                    background: #fff;
+                }
+                body {
+                    margin: 0;
+                    padding: 0;
+                    font: 1em "Open Sans", Helvetica, sans-serif;
+                    font-weight: 300;
+                    color: #333;
+                }
+                a, a:visited {
+                    text-decoration: none;
+                    color: #e4790f;
+                }
+                a:hover {
+                    text-decoration: underline;
+                }
+                h1, h2, h3 {
+                    font-weight: 300;
+                }
+                h1 {
+                    margin: 0;
+                    padding-bottom: 2%;
+                    font-size: 3em;
+                }
+                h2, h3 {
+                    font-size: 1.5em;
+                }
+                #header {
+                    padding: 12px 0 10px;
+                }
+                #content {
+                    padding: 3% 0;
+                    background-color: #eee;
+                }
+                #footer {
+                    font-size: 0.75em;
+                    text-align: center;
+                    padding: .5em 0;
+                    color: #999;
+                }
+                .wrap {
+                    width: 50%;
+                    margin: 0 auto;
+                    overflow: hidden;
+                }
+                .header-logo {
+                    display: inline-block;
+                }
+                .block-error {
+                    margin-bottom: 20px;
+                    background-color: #fff;
+                    border: 1px solid #dfdfdf;
+                    border-radius: 16px;
+                    padding: 15px 28px 24px;
+                    word-wrap: break-word;
+                    overflow: hidden;
+                }
+                .block-error:before {
+                    float: left;
+                    content: "</";
+                    font-size: 5em;
+                    color: #ccc;
+                }
+                .block-error .inner {
+                    padding-left: 15%;
+                }
+                input, button {
+                    background: #fff;
+                    padding: 3px 6px 3px;
+                    border: 1px solid #dfdfdf;
+                    border-radius: 3px;
+                    line-height: 16px;
+                }
+                input[type="search"] {
+                    width: 15em;
+                    margin-right: 3px;
+                }
+                label img {
+                    position: relative;
+                    top: 3px;
+                    margin-right: 3px;
+                }
+            </style>
+       {% endblock %}
+    {% endblock %}
 </head>
 <body>
     <div id="header">
