--- a/core-bundle/src/Resources/views/Error/forward_page_not_found.html.twig
+++ b/core-bundle/src/Resources/views/Error/forward_page_not_found.html.twig
@@ -1,10 +1,10 @@
 {% extends "@ContaoCore/Error/layout.html.twig" %}
 {% block title %}
-    {{ statusCode }} {{ error.noActive }}
+    {{ error.noForward }}
 {% endblock %}
 {% block matter %}
-    <p>{{ error.noActivePages }}</p>
+    <p>{{ error.noForwardPage }}</p>
 {% endblock %}
 {% block howToFix %}
-    <p>{{ error.noActiveFix|format(adminEmail)|raw }}</p>
+    <p>{{ error.noForwardFix|format(adminEmail)|raw }}</p>
 {% endblock %}
