[Core] Update the flexible theme.

--- a/core-bundle/src/Resources/contao/themes/flexible/src/basic.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/src/basic.css
@@ -100,6 +100,13 @@ p {
 .hidden {
 	display:none;
 }
+.unselectable {
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-touch-callout: none;
+}
 
 /* Invisible elements */
 .clear {
@@ -160,6 +167,9 @@ fieldset.checkbox_container,fieldset.radio_container {
 }
 .tl_text_4 {
 	width:70px;
+}
+.tl_imageSize_0.tl_text_4,.tl_imageSize_1.tl_text_4 {
+	width:71px;
 }
 .tl_textarea {
 	width:676px;
@@ -478,6 +488,9 @@ a.tl_submit,a.tl_submit:hover {
 	}
 	.tl_text_4 {
 		width:92px;
+	}
+	.tl_imageSize_0.tl_text_4,.tl_imageSize_1.tl_text_4 {
+		width:94px;
 	}
 	.tl_textarea {
 		width:854px;
