[Core] Port the theme changes from Contao 3.5.

--- a/core-bundle/src/Resources/contao/themes/flexible/src/diff.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/src/diff.css
@@ -44,6 +44,10 @@ h2 {
 	position:relative;
 	top:2px;
 }
+.formbody .static-version {
+	margin-right:3px;
+	vertical-align:middle;
+}
 
 /* Messages */
 .tl_info {
