[Installation] Add the authentication routines.

--- a/installation-bundle/src/Resources/views/license.html.twig
+++ b/installation-bundle/src/Resources/views/license.html.twig
@@ -797,7 +797,7 @@ Library.
       <div class="tl_formbody_submit">
         <input type="hidden" name="FORM_SUBMIT" value="tl_license">
         <div class="tl_submit_container">
-          <button type="submit" class="tl_submit" onclick="Backend.getScrollOffset()">{{ 'accept_license'|trans }}</button>
+          <button type="submit" class="tl_submit">{{ 'accept_license'|trans }}</button>
         </div>
       </div>
     </form>
