--- a/installation-bundle/src/Resources/views/locked.html.twig
+++ b/installation-bundle/src/Resources/views/locked.html.twig
@@ -2,7 +2,8 @@
 
 {% block main %}
   <fieldset class="tl_tbox nolegend">
-    <h3>{{ 'locked_headline'|trans }}</h3>
+    <h3>{{ 'an_error_occurred'|trans }}</h3>
+    <p class="tl_error">{{ 'locked_headline'|trans }}</p>
     <p>{{ 'locked_explanation'|trans|raw }}</p>
   </fieldset>
 {% endblock %}
