--- a/installation-bundle/src/Resources/views/not_writable.html.twig
+++ b/installation-bundle/src/Resources/views/not_writable.html.twig
@@ -2,8 +2,9 @@
 
 {% block main %}
   <fieldset class="tl_tbox nolegend">
-    <h3>{{ 'file_permissions_headline'|trans }}</h3>
-    <p class="tl_error">{{ 'php_not_allowed_to_write_files'|trans }}</p>
+    <h3>{{ 'an_error_occurred'|trans }}</h3>
+    <p class="tl_error">{{ 'file_permissions_headline'|trans }}</p>
     <p>{{ 'file_permissions_explanation'|trans|raw }}</p>
+    <p>{{ 'file_permissions_warning'|trans|raw }}</p>
   </fieldset>
 {% endblock %}
