[Installation] Add the database connection routines.

--- a/installation-bundle/src/Resources/views/login.html.twig
+++ b/installation-bundle/src/Resources/views/login.html.twig
@@ -4,14 +4,14 @@
   <fieldset class="tl_tbox nolegend">
     <h3>{{ 'login'|trans }}</h3>
     <p class="tl_info" id="cookies">{{ 'allow_cookies'|trans }}</p>
+    {% if error %}
+      <p class="tl_error">{{ error }}</p>
+    {% endif %}
     <p>{{ 'login_explanation'|trans }}</p>
     <form method="post">
       <div class="tl_formbody">
         <input type="hidden" name="FORM_SUBMIT" value="tl_login">
         <h4><label for="password">{{ 'password'|trans }}</label></h4>
-        {% if error %}
-          <p class="tl_error">{{ error }}</p>
-        {% endif %}
         <input type="password" name="password" id="password" autocomplete="off" class="tl_text" value="">
       </div>
       <div class="tl_formbody_submit">
@@ -21,5 +21,8 @@
       </div>
     </form>
   </fieldset>
-  <script>navigator.cookieEnabled && $('cookies').destroy()</script>
+  <script>
+    $('password').focus();
+    navigator.cookieEnabled && $('cookies').destroy();
+  </script>
 {% endblock %}
