--- a/installation-bundle/src/Resources/views/password.html.twig
+++ b/installation-bundle/src/Resources/views/password.html.twig
@@ -3,14 +3,14 @@
 {% block main %}
   <fieldset class="tl_tbox nolegend">
     <h3>{{ 'set_password'|trans }}</h3>
+    {% if error %}
+      <p class="tl_error">{{ error }}</p>
+    {%  endif %}
     <p>{{ 'set_password_hint'|trans|raw }}</p>
     <form method="post">
       <div class="tl_formbody">
         <input type="hidden" name="FORM_SUBMIT" value="tl_password">
         <h4><label for="password">{{ 'password'|trans }}</label></h4>
-        {% if error %}
-          <p class="tl_error">{{ error }}</p>
-        {%  endif %}
         <input type="password" name="password" id="password" autocomplete="off" class="tl_text" value="">
         <h4><label for="confirmation">{{ 'confirmation'|trans }}</label></h4>
         <input type="password" name="confirmation" id="confirmation" autocomplete="off" class="tl_text" value="">
@@ -22,4 +22,7 @@
       </div>
     </form>
   </fieldset>
+  <script>
+    $('password').focus();
+  </script>
 {% endblock %}
