[Installation] Add the table update routines.

--- a/installation-bundle/src/Resources/views/layout.html.twig
+++ b/installation-bundle/src/Resources/views/layout.html.twig
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="{{ asset('system/themes/flexible/install.css') }}">
   <!--[if IE]><link rel="stylesheet" href="{{ asset('system/themes/flexible/iefixes.css') }}"><![endif]-->
 
+  <script>var Contao={theme:'flexible',path:'{{ path }}'}</script>
   <script src="{{ asset('assets/mootools/js/mootools.min.js') }}"></script>
   <script src="{{ asset('assets/stylect/js/stylect.min.js') }}"></script>
   <script src="{{ asset('assets/contao/js/mootao.min.js') }}"></script>
