--- a/installation-bundle/src/Resources/views/database.html.twig
+++ b/installation-bundle/src/Resources/views/database.html.twig
@@ -24,7 +24,7 @@
         </div>
         <div class="tl_formbody_submit">
           <div class="tl_submit_container">
-            <input type="submit" class="tl_submit" value="{{ 'save_settings'|trans }}">
+            <button type="submit" class="tl_submit">{{ 'save_settings'|trans }}</button>
           </div>
         </div>
       </form>
